# ariadne

./: .env.example  .gitignore  ARIADNE_ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  UNIVERSAL_PLATFORM_DEVPACK_EN.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
services/task_intake/: README.md  pyproject.toml
services/task_intake/src/task_intake.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
services/task_intake/tests/: test_app_runtime.py  test_artifact_workspace_shell.py  test_backlog_decision.py  test_backlog_review.py  test_context_preview.py  test_copy_export_local_run_report.py  test_decision_backlog_trace_summary.py  test_decision_history.py  test_execution_handoff.py  test_execution_handoff_http.py  test_first_time_user_onboarding_panel.py  test_guided_local_user_test_scenarios.py  test_local_empty_error_states.py  test_local_execution_trace.py  test_local_interaction_page.py  test_local_operator.py  test_local_result_structured_view.py  test_local_run_history_in_page.py  test_local_run_summary_card.py  test_local_runner_selection.py  test_local_user_confusion_signals.py  test_local_user_test_feedback_panel.py  test_local_user_test_session_report.py  test_manual_acceptance_checklist.py  test_manual_orchestration.py  test_mock_loop.py  test_normalize.py  test_normalizer.py  test_product_iteration.py  test_product_iteration_candidate.py  test_product_iteration_review_packet.py  test_product_iteration_summary.py  test_product_iteration_surface.py  test_run_profile_api.py  test_runs.py  test_runtime_evidence_serialization_contract.py  test_svg_sanitizer.py  test_task_intake.py  test_task_intake_http.py  test_task_intake_smoke.py  (+3 more)
(+750 files in other folders)
